 * Fix: Allow spaces and hyphens in login names.
 * Fix: A bug in the handling of the case where a user who does not have access to a private project, but has access level >= private_project_threshold.
 * Fix: All bugs were displayed if "All Projects" is selected and user has access to no projects.
 * Fix: Problem in filtering on reporter = 'any' in the print pages.
 * Fix #2992: Unable to attach files to bugs on Windows servers with magic quotes ON.
 * Fix #2999: Only administrators to can (to private) projects.
 * Fix #3027: History summary a little bit too wide in emails.
 * Fix #3064: view bug buttons in vertical column
 * Fix #3072: Attached file should be opened up in a new browser window.
 * Fix #3076: Bug reports are added to the "wrong" project.
 * Fix #3079: Error when using phpMailer.
 * Fix #3080: project menu bar shows extra links
 * Fix #3089: Hide link to Profiles management on account page based on access level.
 * Fix #3092: Problem changing printing prefs.
 * Fix #3097: App Error 700 in project_api.php when viewing certain bugs.
 * Fix #3108: No custom fields are shown in the details, if you are in "All Projects"
 * Fix #3109: Error when adding protected users.
 * Fix #3110: "Print reports" preview in explorer is not possible unless you select "Display selected only" 
 * Fix #3111: Bug links in bugnotes do not contain the FQDN as they do in the full reference.
 * Fix #3115: manage_proj_cat_edit_page.php uses the wrong project id.
 * Fix #3120: Missing "Assign To" field on "Report Bug" screen.
 * Fix #3121: When creating a bug that has custom fields, the values for the custom fields are not sent out in the email.
 * Fix #3124: view_bugs: a reporter has the drop-down box of actions, but doesn't have the checkboxes.
 * Fix #3132: Email for feedback does not contain the last bugnote
 * Fix #3140: attachment.png is corrupt in CVS.
 * Fix #3143: Show a padlock instead of "p".