@@ -11,6 +11,7 @@ Mantis ChangeLog
  * Fix: A bug in the handling of the case where a user who does not have access to a private project, but has access level >= private_project_threshold.
  * Fix: All bugs were displayed if "All Projects" is selected and user has access to no projects.
  * Fix: Problem in filtering on reporter = 'any' in the print pages.
+ * Enhancement #2377: Index user names in manage user page by letters.
  * Fix #2992: Unable to attach files to bugs on Windows servers with magic quotes ON.
  * Fix #2999: Only administrators to can (to private) projects.
  * Fix #3027: History summary a little bit too wide in emails.
